--- a/jcamd_model_comparison.ipynb
+++ b/jcamd_model_comparison.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con = sql.connect(host='localhost', database='chembl_26', user='pwalters', password='relayrelay')\n",
+    "con = sql.connect(host='localhost', database='chembl_26', user='pwalters', password='itsasecret')\n",
     "cursor = con.cursor()"
    ]
   },
